--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -14,13 +14,21 @@
         placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}">
     </ion-searchbar>
     <ion-list>
-        <button ion-item (click)="openItem(item)" *ngFor="let item of currentItems">
-            <ion-avatar item-start>
-                <img [src]="item.profilePic" />
-            </ion-avatar>
+        <!-- <ion-item *ngFor="let item of queryItems">
+            <ion-icon name="git-commit"></ion-icon>
+            <h2>{{item.name}}</h2>
+            <h3>Don't Know What To Do!</h3>
+            <p>Precio: ${{item.price}} | ID: {{item.id}} | {{item.nAvailable}}</p>
+            <button ion-button outline item-end icon-left>
+                <ion-icon name="basket"></ion-icon>
+                Left Icon
+            </button>
+        </ion-item> -->
+        <button ion-item (click)="item.selected=!item.selected" *ngFor="let item of queryItems">
             <h2>{{item.name}}</h2>
             <p>Precio: ${{item.price}} | ID: {{item.id}} | {{item.nAvailable}}</p>
-            <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
+            <!-- <ion-note item-end *ngIf="!item.selected">{{item.id}}</ion-note> -->
+            <ion-icon name="basket" small item-end *ngIf="item.selected"></ion-icon>
         </button>
     </ion-list>
 </ion-content>
