--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,6 +19,7 @@
                     </ion-buttons>
                 </ion-toolbar>
                 <ion-list>
+                    {{message}}
                     <ion-item>
                         <h2>Item name</h2>
                         <p>$1500 (x2)</p>
