Sharing Data with a Service: Advanced

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -26,7 +26,7 @@
             </button>
         </ion-item> -->
         <!-- <button ion-item (click)="item.selected=!item.selected" *ngFor="let item of queryItems"> -->
-        <button ion-item (click)="itemsProvider.changeMessage(item.name)" *ngFor="let item of queryItems">
+        <button ion-item (click)="changeSelectedItems(item)" *ngFor="let item of queryItems">
             <h2>{{item.name}}</h2>
             <p>Precio: ${{item.price}} | ID: {{item.id}} | {{item.nAvailable}}</p>
             <!-- <ion-note item-end *ngIf="!item.selected">{{item.id}}</ion-note> -->
