--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,22 +14,15 @@
                     <ion-title>Carrito de ventas</ion-title>
                     <ion-buttons end>
                         <button ion-button color="primary" outline>
-                            $4200
+                            ${{total}}
                         </button>
                     </ion-buttons>
                 </ion-toolbar>
                 <ion-list>
-                    {{message}}
-                    <ion-item>
-                        <h2>Item name</h2>
-                        <p>$1500 (x2)</p>
-                        <ion-note item-end *ngIf="true">$3000</ion-note>
-                    </ion-item>
-                    <ion-item>
-                        <h2>Item name</h2>
-                        <p>$1200</p>
-                        <ion-note item-end *ngIf="true">$1200</ion-note>
-                        <!-- <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note> -->
+                    <ion-item *ngFor="let item of selectedItems">
+                        <h2>{{item.name}}</h2>
+                        <p>${{item.price}}</p>
+                        <ion-note item-end *ngIf="true">${{item.price}}</ion-note>
                     </ion-item>
                 </ion-list>
             </ion-col>
