--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
                     <ion-title>Carrito de ventas</ion-title>
                     <ion-buttons end>
                         <button ion-button color="primary" outline>
-                            ${{total}}
+                            {{total | currency:'COP':'symbol-narrow':'1.0'}}
                         </button>
                     </ion-buttons>
                 </ion-toolbar>
