--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,7 +22,9 @@
                     No hay items para mostrar.
                 </ion-note>
                 <ion-list>
-                    <ion-item *ngFor="let item of selectedItems" class="item-shoping-cart">
+                    <ion-item *ngFor="let item of selectedItems"
+                        class="item-shoping-cart"
+                        (press)="pressEvent($event, item)">
                         <h2>{{item.name}}</h2>
                         <!-- <ion-grid>
                             <ion-row>
@@ -53,7 +55,7 @@
                             </button> -->
                         </p>
                         <ion-note item-end *ngIf="true">                            
-                            <button ion-button icon-only round clear small (click)="addItem(item)">
+                            <button ion-button icon-only round clear small (click)="increaseItem(item)">
                                 <ion-icon name="add-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
                             </button>
                             <br>
