--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -31,7 +31,7 @@
             <p>Precio: {{item.price | currency:'COP':'symbol-narrow':'1.0'}}
                  | ID: {{item.id}} | {{item.nAvailable}}</p>
             <!-- <ion-note item-end *ngIf="!item.selected">{{item.id}}</ion-note> -->
-            <ion-icon name="basket" small item-end *ngIf="item.selected"></ion-icon>
+            <ion-icon name="cart" small item-end *ngIf="item.selected"></ion-icon>
         </button>
     </ion-list>
 </ion-content>
