--- a/src/pages/sales-historic/sales-historic.html
+++ b/src/pages/sales-historic/sales-historic.html
@@ -8,5 +8,10 @@
 
 
 <ion-content padding>
+    <ion-list>
+        <ion-item *ngFor="let sale of sales">
+            <h2>{{ sale.value }}</h2>
+        </ion-item>
+    </ion-list>
 
 </ion-content>
