--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,8 +13,8 @@
                 <ion-toolbar class="toolb">
                     <ion-title>Carrito de ventas</ion-title>
                     <ion-buttons end>
-                        <button ion-button color="primary" outline>
-                            {{total | currency:'COP':'symbol-narrow':'1.0'}}
+                        <button ion-button color="primary" outline (click)="generateSale()">
+                            {{sale.value | currency:'COP':'symbol-narrow':'1.0'}}
                         </button>
                     </ion-buttons>
                 </ion-toolbar>
@@ -24,7 +24,7 @@
                 <ion-list>
                     <ion-item *ngFor="let item of selectedItems"
                         class="item-shoping-cart"
-                        (press)="pressEvent($event, item)">
+                        (press)="pressEvent(item)">
                         <h2>{{item.name}}</h2>
                         <!-- <ion-grid>
                             <ion-row>
