--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -59,7 +59,7 @@
                                 <ion-icon name="add-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
                             </button>
                             <br>
-                            <button ion-button icon-only round clear small (click)="subtractItem(item)">
+                            <button ion-button icon-only round clear small (click)="decreaseItem(item)">
                                 <ion-icon name="remove-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
                             </button>
                         </ion-note>
