--- a/src/pages/stock/stock.html
+++ b/src/pages/stock/stock.html
@@ -1,12 +1,43 @@
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>Inventario</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-buttons start>
+            <button ion-button icon-only>
+                <ion-icon name="add"></ion-icon>
+            </button>
+        </ion-buttons>
+            
+        <ion-buttons end>
+            <button ion-button icon-only>
+                <ion-icon name="sync"></ion-icon>
+            </button>
+        </ion-buttons>
+        <ion-title>Inventario</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+    <ion-list>
+        <ion-grid>            
+            <ion-item *ngFor="let item of allItems">
+                <ion-row>
+                    <ion-col col-6>
+                        <h2>{{ item.name }}</h2>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button color="light" full (click)="decreaseItem(item)">-1</button>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button full (click)="increaseItem(item)">+1</button>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button full clear color="dark">{{ item.nAvailable }}</button>                        
+                    </ion-col>
+                </ion-row>
+            </ion-item>            
+        </ion-grid>
+    </ion-list>
 
 </ion-content>
