--- a/src/pages/stock/stock.html
+++ b/src/pages/stock/stock.html
@@ -20,17 +20,39 @@
 
 <ion-content>
     <ion-list>
-        <ion-grid>            
+        <ion-grid>
+            <ion-row>
+                <ion-col></ion-col>
+                <ion-col></ion-col>
+                <ion-col col-2>
+                    <ion-item>
+                        <ion-input type="number" placeholder="Valor" [(ngModel)]="customIncreaseValue"></ion-input>
+                    </ion-item>
+                </ion-col>
+                <ion-col></ion-col>
+                <ion-col></ion-col>
+            </ion-row>
+
             <ion-item *ngFor="let item of allItems">
                 <ion-row>
                     <ion-col col-6>
                         <h2>{{ item.name }}</h2>
                     </ion-col>
                     <ion-col>
+                        <button ion-button full  color="danger" (click)="setItemCustomValue(item)" [disabled]="customIncreaseValue < 0">
+                            ={{ customIncreaseValue }}
+                        </button>
+                    </ion-col>
+                    <ion-col>
                         <button ion-button color="light" full (click)="decreaseItem(item)">-1</button>
                     </ion-col>
                     <ion-col>
                         <button ion-button full (click)="increaseItem(item)">+1</button>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button full  color="secondary" (click)="increaseItemCustomValue(item)">
+                            <span *ngIf="customIncreaseValue > -1">+</span>{{ customIncreaseValue }}
+                        </button>
                     </ion-col>
                     <ion-col>
                         <button ion-button full clear color="dark">{{ item.nAvailable }}</button>                        
