--- a/src/pages/stock/stock.html
+++ b/src/pages/stock/stock.html
@@ -1,12 +1,6 @@
 <ion-header>
 
-    <ion-navbar>
-        <ion-buttons start>
-            <button ion-button icon-only>
-                <ion-icon name="add"></ion-icon>
-            </button>
-        </ion-buttons>
-            
+    <ion-navbar>            
         <ion-buttons end>
             <button ion-button icon-only>
                 <ion-icon name="sync"></ion-icon>
@@ -19,6 +13,11 @@
 
 
 <ion-content>
+
+    <ion-fab bottom right>
+        <button ion-fab (click)="createItem()"><ion-icon name="add"></ion-icon></button>
+    </ion-fab>
+
     <ion-list>
         <ion-grid>
             <ion-row>
@@ -39,7 +38,12 @@
                         <h2>{{ item.name }}</h2>
                     </ion-col>
                     <ion-col>
-                        <button ion-button full  color="danger" (click)="setItemCustomValue(item)" [disabled]="customIncreaseValue < 0">
+                        <button ion-button icon-only color="danger" full>
+                            <ion-icon name="trash"></ion-icon>
+                        </button>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button full  color="dark" (click)="setItemCustomValue(item)" [disabled]="customIncreaseValue < 0">
                             ={{ customIncreaseValue }}
                         </button>
                     </ion-col>
