--- a/src/pages/stock/stock.html
+++ b/src/pages/stock/stock.html
@@ -2,7 +2,7 @@
 
     <ion-navbar>            
         <ion-buttons end>
-            <button ion-button icon-only>
+            <button ion-button icon-only (click)="syncUpdatedItems()">
                 <ion-icon name="sync"></ion-icon>
             </button>
         </ion-buttons>
