Search page only in HomeTab

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,381 +1,16 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Home</ion-title>
+        <ion-title>Inicio</ion-title>
     </ion-navbar>
 </ion-header>
 
+
 <ion-content>
-    <ion-grid>
-        <ion-row>
-            <ion-col></ion-col>
-            <ion-col></ion-col>
-            <ion-col>
-                <ion-toolbar class="toolb">
-                    <ion-title>Carrito de ventas</ion-title>
-                    <ion-buttons end>
-                        <button ion-button color="primary" outline (click)="generateSale()">
-                            {{sale.value | currency:'COP':'symbol-narrow':'1.0'}}
-                        </button>
-                    </ion-buttons>
-                </ion-toolbar>
-                <ion-note *ngIf="selectedItems.length==0">
-                    No hay items para mostrar.
-                </ion-note>
-                <ion-list>
-                    <ion-item *ngFor="let item of selectedItems"
-                        class="item-shoping-cart"
-                        (press)="pressEvent(item)">
-                        <h2>{{item.name}}</h2>
-                        <!-- <ion-grid>
-                            <ion-row>
-                                <ion-col col-4>
-                                    <p>{{item.price | currency:'COP':'symbol-narrow':'1.0'}}</p>
-                                </ion-col>
-                                <ion-col col-4>
-                                    <button ion-button icon-only round clear small>
-                                        <ion-icon name="remove-circle"></ion-icon>
-                                    </button>
-                                    {{item.nAvailable}}
-                                    <button ion-button icon-only round clear small>
-                                            <ion-icon name="add-circle"></ion-icon>
-                                    </button>
-                                </ion-col>
-                                <ion-col col-4>
-                                </ion-col>                                
-                            </ion-row>
-                        </ion-grid> -->
-                        <p>
-                            {{item.price | currency:'COP':'symbol-narrow':'1.0'}}
-                            <!-- <button ion-button icon-only round clear small>
-                                <ion-icon name="remove-circle"></ion-icon>
-                            </button>
-                            bla
-                            <button ion-button icon-only round clear small>
-                                    <ion-icon name="add-circle"></ion-icon>
-                            </button> -->
-                        </p>
-                        <ion-note item-end *ngIf="true">                            
-                            <button ion-button icon-only round clear small (click)="increaseItem(item)">
-                                <ion-icon name="add-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
-                            </button>
-                            <br>
-                            <button ion-button icon-only round clear small (click)="decreaseItem(item)">
-                                <ion-icon name="remove-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
-                            </button>
-                        </ion-note>
-                        <ion-note item-end *ngIf="true">
-                            {{(item.price * item.nSelected) | currency:'COP':'symbol-narrow':'1.0'}}<br>
-                            x{{item.nSelected}}
-                        </ion-note>
-                    </ion-item>
-                </ion-list>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+    <ion-split-pane when="xs">
+        <!-- the search content -->
+        <ion-nav [root]="homeSide"></ion-nav>
+
+        <!-- the main content -->
+        <ion-nav [root]="homeMain" main></ion-nav>
+    </ion-split-pane>
 </ion-content>
-
-<!-- <ion-content class="grid-basic-page">
-
-    <p padding>
-        Equal-width columns
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 3</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Setting one column width
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col col-6>
-                <div>2 of 3 (wider)</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col col-6>
-                <div>1 of 3 (wider)</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 3</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Variable-width columns
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col col-auto>
-                <div>Variable width content</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col col-auto>
-                <div>
-                    <ion-icon name="globe"></ion-icon>
-                </div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Offsetting columns
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col offset-4>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col offset-4>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Push and pull
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col col-9 push-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3 pull-9>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col col-6 push-3>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col col-3 push-3>
-                <div>2 of 3</div>
-            </ion-col>
-            <ion-col col-3 pull-9>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Setting all column widths
-        <br>
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col col-4>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 3</div>
-            </ion-col>
-            <ion-col col-5>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Vertical alignment
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4
-                    <br>#</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 4
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row align-items-start>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row align-items-center>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row align-items-end>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <ion-grid>
-        <ion-row>
-            <ion-col align-self-start>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col align-self-center>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col align-self-end>
-                <div>3 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Horizontal Alignment
-    </p>
-    <ion-grid>
-        <ion-row justify-content-start>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row justify-content-center>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row justify-content-end>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row justify-content-around>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row justify-content-between>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-</ion-content> -->
