--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,14 +1,11 @@
-<ion-header>
-
+<!-- <ion-header>
     <ion-navbar>
         <ion-title>{{ 'SEARCH_TITLE' | translate }}</ion-title>
     </ion-navbar>
-
-</ion-header>
+</ion-header> -->
 
 
 <ion-content>
-    {{ message }}
     <ion-searchbar
         (ionInput)="getItems($event)"
         [showCancelButton]="true"
