Disable item in search when no available

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -23,11 +23,12 @@
             </button>
         </ion-item> -->
         <!-- <button ion-item (click)="item.selected=!item.selected" *ngFor="let item of queryItems"> -->
-        <button ion-item (click)="changeSelectedItems(item)" *ngFor="let item of queryItems">
+        <button ion-item (click)="changeSelectedItems(item)" 
+            *ngFor="let item of queryItems" [disabled]="item.nAvailable == 0">
             <h2>{{item.name}}</h2>
             <p>Precio: {{item.price | currency:'COP':'symbol-narrow':'1.0'}}
                  | ID: {{item.id}} | {{item.nAvailable}}</p>
-            <!-- <ion-note item-end *ngIf="!item.selected">{{item.id}}</ion-note> -->
+            <ion-note item-end *ngIf="item.nAvailable == 0">No disponible</ion-note>
             <ion-icon name="cart" small item-end *ngIf="item.selected"></ion-icon>
         </button>
     </ion-list>
