--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -7,8 +7,7 @@
 
 <ion-content>
     <ion-searchbar
-        (ionInput)="getItems($event)"
-        [showCancelButton]="true"
+        (ionInput)="filterItems($event)"
         placeholder="{{ 'SEARCH_PLACEHOLDER' | translate }}">
     </ion-searchbar>
     <ion-list>
