--- a/src/pages/stock/stock.html
+++ b/src/pages/stock/stock.html
@@ -21,24 +21,31 @@
     <ion-list>
         <ion-grid>
             <ion-row>
+                <ion-col col-6>
+                    <ion-searchbar
+                        (ionInput)="filterItems($event)"
+                        placeholder="Buscar items por nombre, id...">
+                    </ion-searchbar>
+                </ion-col>
                 <ion-col></ion-col>
                 <ion-col></ion-col>
-                <ion-col col-2>
+                <ion-col></ion-col>
+                <ion-col></ion-col>
+                <ion-col>
                     <ion-item>
                         <ion-input type="number" placeholder="Valor" [(ngModel)]="customIncreaseValue"></ion-input>
                     </ion-item>
                 </ion-col>
                 <ion-col></ion-col>
-                <ion-col></ion-col>
             </ion-row>
 
-            <ion-item *ngFor="let item of allItems">
+            <ion-item *ngFor="let item of queryItems">
                 <ion-row>
                     <ion-col col-6>
                         <h2>{{ item.name }}</h2>
                     </ion-col>
                     <ion-col>
-                        <button ion-button icon-only color="danger" full>
+                        <button ion-button icon-only color="danger" full (click)="removeItemEvent(item)">
                             <ion-icon name="trash"></ion-icon>
                         </button>
                     </ion-col>
