Tooltips in HomePage

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -22,8 +22,9 @@
             </button>
         </ion-item> -->
         <!-- <button ion-item (click)="item.selected=!item.selected" *ngFor="let item of queryItems"> -->
-        <button ion-item (click)="changeSelectedItems(item)" 
-            *ngFor="let item of queryItems" [disabled]="item.nAvailable == 0">
+        <button ion-item (tap)="changeSelectedItems(item)"
+            *ngFor="let item of queryItems" [disabled]="item.nAvailable == 0"
+            [tooltip]="item.name" positionV="bottom" event="press" duration="4000" arrow>
             <h2>{{item.name}}</h2>
             <p>Precio: {{item.price | currency:'COP':'symbol-narrow':'1.0'}}
                  | ID: {{item.id}} | {{item.nAvailable}}</p>
