--- a/src/pages/home-main/home-main.html
+++ b/src/pages/home-main/home-main.html
@@ -8,9 +8,9 @@
 <ion-content>
     <ion-grid>
         <ion-row>
-            <ion-col></ion-col>
-            <ion-col></ion-col>
-            <ion-col>
+            <ion-col col-4></ion-col>
+            <ion-col col-4></ion-col>
+            <ion-col col-4>
                 <ion-toolbar class="toolb">
                     <ion-title>Carrito de ventas</ion-title>
                     <ion-buttons end>
@@ -25,7 +25,8 @@
                 <ion-list>
                     <ion-item *ngFor="let item of selectedItems"
                         class="item-shoping-cart"
-                        (press)="pressEvent(item)">
+                        (press)="pressEvent(item)"
+                        [tooltip]="item.name" positionV="bottom" event="click" duration="4000" arrow>
                         <h2>{{item.name}}</h2>
                         <p>
                             {{item.price | currency:'COP':'symbol-narrow':'1.0'}}
