--- a/src/pages/home-main/home-main.html
+++ b/src/pages/home-main/home-main.html
@@ -25,18 +25,18 @@
                 <ion-list>
                     <ion-item *ngFor="let item of selectedItems"
                         class="item-shoping-cart"
-                        (press)="pressEvent(item)"
-                        [tooltip]="item.name" positionV="bottom" event="click" duration="4000" arrow>
+                        (swipe)="swipeEvent(item)"
+                        [tooltip]="item.name" positionV="bottom" event="press" duration="4000" arrow>
                         <h2>{{item.name}}</h2>
                         <p>
                             {{item.price | currency:'COP':'symbol-narrow':'1.0'}}
                         </p>
                         <ion-note item-end *ngIf="true">                            
-                            <button ion-button icon-only round clear small (click)="increaseItem(item)">
+                            <button ion-button icon-only round clear small (tap)="increaseItem(item)">
                                 <ion-icon name="add-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
                             </button>
                             <br>
-                            <button ion-button icon-only round clear small (click)="decreaseItem(item)">
+                            <button ion-button icon-only round clear small (tap)="decreaseItem(item)">
                                 <ion-icon name="remove-circle" [ngStyle]="{'color':'gray'}"></ion-icon>
                             </button>
                         </ion-note>
@@ -45,6 +45,16 @@
                             x{{item.nSelected}}
                         </ion-note>
                     </ion-item>
+                    <div *ngIf="selectedItems.length!=0">
+                        <ion-item>
+                            <ion-label>Crédito</ion-label>
+                            <ion-checkbox [(ngModel)]="credit" (ionChange)="toggleCredit()"></ion-checkbox>
+                        </ion-item>
+                        <ion-item *ngIf="credit">
+                            <ion-label stacked>Nombre</ion-label>
+                            <ion-input type="text" [(ngModel)]="debtorName"></ion-input>
+                        </ion-item>
+                    </div>
                 </ion-list>
             </ion-col>
         </ion-row>
