--- a/src/pages/home-main/home-main.html
+++ b/src/pages/home-main/home-main.html
@@ -45,324 +45,26 @@
                             x{{item.nSelected}}
                         </ion-note>
                     </ion-item>
-                    <div *ngIf="selectedItems.length!=0">
+                </ion-list>
+                <div *ngIf="selectedItems.length!=0">
+                    <ion-list inset>
                         <ion-item>
                             <ion-label>Crédito</ion-label>
                             <ion-checkbox [(ngModel)]="credit" (ionChange)="toggleCredit()"></ion-checkbox>
                         </ion-item>
-                        <ion-item *ngIf="credit">
-                            <ion-label stacked>Nombre</ion-label>
-                            <ion-input type="text" [(ngModel)]="debtorName"></ion-input>
-                        </ion-item>
-                    </div>
-                </ion-list>
+                        <div *ngIf="credit">
+                            <ion-item>
+                                <ion-label fixed>Nombre</ion-label>
+                                <ion-input type="text" [(ngModel)]="debtorName" placeholder="Don Raúl"></ion-input>
+                            </ion-item>
+                            <ion-item>
+                                <ion-label fixed>Abono</ion-label>
+                                <ion-input type="number" [(ngModel)]="paidValue" min=0></ion-input>
+                            </ion-item>
+                        </div>
+                    </ion-list>
+                </div>
             </ion-col>
         </ion-row>
     </ion-grid>
 </ion-content>
-
-<!-- <ion-content class="grid-basic-page">
-
-    <p padding>
-        Equal-width columns
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 3</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Setting one column width
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col col-6>
-                <div>2 of 3 (wider)</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col col-6>
-                <div>1 of 3 (wider)</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 3</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Variable-width columns
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col col-auto>
-                <div>Variable width content</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col col-auto>
-                <div>
-                    <ion-icon name="globe"></ion-icon>
-                </div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Offsetting columns
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col offset-4>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col offset-4>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Push and pull
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col col-9 push-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3 pull-9>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row>
-            <ion-col col-6 push-3>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col col-3 push-3>
-                <div>2 of 3</div>
-            </ion-col>
-            <ion-col col-3 pull-9>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Setting all column widths
-        <br>
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col col-4>
-                <div>1 of 3</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 3</div>
-            </ion-col>
-            <ion-col col-5>
-                <div>3 of 3</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Vertical alignment
-    </p>
-    <ion-grid>
-        <ion-row>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4
-                    <br>#</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 4
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row align-items-start>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row align-items-center>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row align-items-end>
-            <ion-col>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>3 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <ion-grid>
-        <ion-row>
-            <ion-col align-self-start>
-                <div>1 of 4</div>
-            </ion-col>
-            <ion-col align-self-center>
-                <div>2 of 4</div>
-            </ion-col>
-            <ion-col align-self-end>
-                <div>3 of 4</div>
-            </ion-col>
-            <ion-col>
-                <div>4 of 4
-                    <br>#
-                    <br>#
-                    <br>#</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-
-    <p padding>
-        Horizontal Alignment
-    </p>
-    <ion-grid>
-        <ion-row justify-content-start>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row justify-content-center>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row justify-content-end>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row justify-content-around>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-
-        <ion-row justify-content-between>
-            <ion-col col-3>
-                <div>1 of 2</div>
-            </ion-col>
-            <ion-col col-3>
-                <div>2 of 2</div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-</ion-content> -->
