--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,4 +2,5 @@
     <ion-tab [root]="tab1Root" [tabTitle]="tab1Title" tabIcon="home"></ion-tab>
     <ion-tab [root]="tab2Root" [tabTitle]="tab2Title" tabIcon="list"></ion-tab>
     <ion-tab [root]="tab3Root" [tabTitle]="tab3Title" tabIcon="clipboard"></ion-tab>
+    <ion-tab [root]="tab4Root" [tabTitle]="tab4Title" tabIcon="contacts"></ion-tab>
 </ion-tabs>
