--- a/src/pages/debts/debts.html
+++ b/src/pages/debts/debts.html
@@ -7,4 +7,11 @@
 
 <ion-content padding>
 
+    <ion-list>
+        <ion-item *ngFor="let debt of allDebts">
+                <h2>{{ debt.value }}</h2>
+                <p>{{ debt.debtor }}</p>
+        </ion-item>
+    </ion-list>
+
 </ion-content>
