--- a/src/pages/debts/debts.html
+++ b/src/pages/debts/debts.html
@@ -1,17 +1,41 @@
-<ion-header>
+<!-- <ion-header>
     <ion-navbar color="primary">
         <ion-title>Deudores</ion-title>
     </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 
-<ion-content padding>
+<ion-content>
+    <ion-split-pane when="xs">
 
-    <ion-list>
+        <!-- the side content -->
+        <ion-menu [content]="content">
+            <ion-header>
+                <ion-toolbar color="primary">
+                    <ion-title>
+                        Deudores
+                    </ion-title>
+                </ion-toolbar>
+            </ion-header>
+            <ion-content>
+                <ion-list>
+                    <ion-item *ngFor="let debtor of debtors">
+                        <h2>{{ debtor }}</h2>
+                    </ion-item>
+                </ion-list>
+            </ion-content>
+        </ion-menu>
+
+        <!-- the main content -->
+        <ion-nav [root]="debtsMain" #content main></ion-nav>
+
+    </ion-split-pane>
+
+<!--     <ion-list>
         <ion-item *ngFor="let debt of allDebts">
                 <h2>{{ debt.value }}</h2>
                 <p>{{ debt.debtor }}</p>
         </ion-item>
-    </ion-list>
+    </ion-list> -->
 
 </ion-content>
