Basic Master/Detail View

--- a/src/pages/debts/debts.html
+++ b/src/pages/debts/debts.html
@@ -9,33 +9,11 @@
     <ion-split-pane when="xs">
 
         <!-- the side content -->
-        <ion-menu [content]="content">
-            <ion-header>
-                <ion-toolbar color="primary">
-                    <ion-title>
-                        Deudores
-                    </ion-title>
-                </ion-toolbar>
-            </ion-header>
-            <ion-content>
-                <ion-list>
-                    <ion-item *ngFor="let debtor of debtors">
-                        <h2>{{ debtor }}</h2>
-                    </ion-item>
-                </ion-list>
-            </ion-content>
-        </ion-menu>
-
+        <ion-nav [root]="masterPage" #masterNav></ion-nav>
+        
         <!-- the main content -->
-        <ion-nav [root]="debtsMain" #content main></ion-nav>
+        <ion-nav [root]="detailPage" #detailNav main></ion-nav>
 
     </ion-split-pane>
-
-<!--     <ion-list>
-        <ion-item *ngFor="let debt of allDebts">
-                <h2>{{ debt.value }}</h2>
-                <p>{{ debt.debtor }}</p>
-        </ion-item>
-    </ion-list> -->
 
 </ion-content>
