Detail page basic

--- a/src/pages/debts-detail/debts-detail.html
+++ b/src/pages/debts-detail/debts-detail.html
@@ -1,12 +1,13 @@
 <ion-header>
 
     <ion-navbar color="primary">
-        <ion-title>Deudas</ion-title>
+        <ion-title>Deudas de {{ debtor }}</ion-title>
     </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-Hola Mundo
+    {{ value }}
+    {{ debtor }}
 </ion-content>
