--- a/src/pages/debts-master/debts-master.html
+++ b/src/pages/debts-master/debts-master.html
@@ -1,18 +1,14 @@
 <ion-header>
-
-    <ion-navbar color="primary">
+    <ion-toolbar color="primary">
         <ion-title>Deudores</ion-title>
-    </ion-navbar>
-
+    </ion-toolbar>
 </ion-header>
 
 
-<ion-content padding>
-    
+<ion-content padding>    
     <ion-list>
-        <ion-item *ngFor="let debtor of debtors">
+        <button ion-item *ngFor="let debtor of debtors" (click)="onDebtorSelected(debtor)">
             <h2>{{ debtor }}</h2>
-        </ion-item>
-    </ion-list>
-    
+        </button>
+    </ion-list>    
 </ion-content>
