--- a/src/pages/debts-detail/debts-detail.html
+++ b/src/pages/debts-detail/debts-detail.html
@@ -1,13 +1,15 @@
 <ion-header>
-
     <ion-navbar color="primary">
         <ion-title>Deudas de {{ debtor }}</ion-title>
     </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-    {{ value }}
-    {{ debtor }}
+    <ion-list>
+        <ion-item *ngFor="let debt of debts">
+            <h2>{{ debt.value }}</h2>
+            <p>{{ debt.paidValue }}</p>
+        </ion-item>
+    </ion-list>
 </ion-content>
